# Hawkeye-OS

./: .dockerignore  .gitignore  .gitmodules  BUILD_INSTRUCTIONS.md  DEBUG_INVESTIGATION.md  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  mock_gcom.py  requirements.txt  setup_env.sh  start_system.sh  stop_system.sh  test-hawkeye-os.sh
.devcontainer/: devcontainer.json
docs/: streaming-architecture.md
infrastructure/webrtc_signaling_server/: Dockerfile  README.md  requirements.txt  server.py  test_client.py
mock-webrtc-peer/: index.html  package.json  pnpm-lock.yaml
mock-webrtc-peer/src/: App.css  App.tsx
mock-webrtc-peer/src/components/: ConnectionControls.css  ConnectionControls.tsx  StatusPanel.css  StatusPanel.tsx  VideoDisplay.css  VideoDisplay.tsx
mock-webrtc-peer/src/hooks/: useWebRTCConnection.ts
src/imaging_realsense/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/imaging_realsense/imaging_realsense/: __init__.py  camera_publisher.py  image_processor.py  image_processor_synced.py
src/imaging_realsense/launch/: rs_hawkeye_launch.py  rs_hawkeye_synced_launch.py
src/navigation/: package.xml  setup.py
src/navigation/launch/: start_mission.launch.py
src/navigation/navigation/: navigation.py
src/orchestrator/: package.xml  setup.py
src/orchestrator/launch/: hawkeye_launch.py  mock_image_streaming_launch.py
src/orchestrator/orchestrator/: mock_object_detection.py  orchestrator.py
src/streaming/: .gitignore  README.md  package.xml  setup.py
src/streaming/streaming/: constants.py  streaming.py  (+2 more)
